INTERNSHIP-29: добавление value objects
